--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1608,6 +1608,16 @@ section {
   background-size: cover;
 }
 
+#footer > div.footer-top > div > div > div.col-lg-3.col-md-6.footer-contact > a > img {
+  width: 60%;
+  margin-bottom: 20px;
+  padding: 0;
+  line-height: 1;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
 #footer .footer-top {
   padding: 60px 0 30px 0;
   position: relative;
